--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,18 +1,34 @@
+/* Global fonts */
 @import url('https://fonts.googleapis.com/css2?family=Prata&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+/* Show underline when active */
 a.active hr {
   display: block;
 }
 
+/* Global Outfit font */
 * {
   font-family: 'Outfit', sans-serif;
 }
 
+/* Prata font class */
 .prata-regular {
   font-family: "Prata", serif;
   font-weight: 400;
   font-style: normal;
+}
+::-webkit-scrollbar{
+  display: none;
+}
+
+/* Fix: Remove mobile black bg for active links */
+@media (max-width: 640px) {
+  a.active {
+    background-color: transparent !important;
+    color: black !important;
+  }
 }
